# daily-diary

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
daily/: __init__.py  cli.py  config.py  daily.py  journal.py  utils.py  view.py
daily-diary/: daily-diary.py
src/: daily.py
tests/: test_cli.py  test_config.py  test_journal.py  test_utils.py
