[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-diary"
version = "0.2dev"
description = "A command line tool for keeping a markdown diary"
readme = "README.md"
authors = [{name = "Connor Murphy"}]
license = {file = "LICENSE"}
keywords = ["cli", "markdown", "journal", "diary"]
classifiers = [
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.10"
dependencies = [
"colorist"
]

[project.scripts]
daily = 'daily.cli:main'

[project.urls]
Repository = "https://github.com/contrick64/daily-diary"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
